[project]
name = "codyssey-b3-1"
version = "0.1.0"
description = "CLI Mini Redis assignment with custom data structures"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.3,<8.4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
